--- a/WebDesign.html
+++ b/WebDesign.html
@@ -1,5 +1,10 @@
 <html>
 <head>
+<style>
+{h1 font-size:25px; color:#1d2236}
+<title>Intro to Web Design, Fall 2014</title>
+<link rel="stylesheet" type="text/css" href="teaching.css">
+</style>
 <title>Intro to Web Design, Fall 2014</title>
 <link rel="stylesheet" type="text/css" href="teaching.css">
 </head>
